--- a/MLmodel.ipynb
+++ b/MLmodel.ipynb
@@ -14,8 +14,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import rpy2.robjects as ro\n",
-    "\n"
+    "import rpy2.robjects as ro"
    ]
   },
   {
@@ -30,19 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"C:/Users/medha/AppData/Local/R/win-library/4.4\"\n",
-      "[2] \"C:/Program Files/R/R-4.4.2/library\"            \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(ro.r('.libPaths()'))"
    ]
@@ -59,18 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\medha\\anaconda3\\envs\\springtime;C:\\Users\\medha\\anaconda3\\envs\\springtime;C:\\Users\\medha\\anaconda3\\envs\\springtime\\Library\\mingw-w64\\bin;C:\\Users\\medha\\anaconda3\\envs\\springtime\\Library\\usr\\bin;C:\\Users\\medha\\anaconda3\\envs\\springtime\\Library\\bin;C:\\Users\\medha\\anaconda3\\envs\\springtime\\Scripts;C:\\Users\\medha\\anaconda3\\envs\\springtime\\bin;C:\\Users\\medha\\anaconda3\\condabin;C:\\Users\\medha\\AppData\\Roaming\\Microsoft\\Windows\\Start Menu\\Programs\\Python\\Python 3.13;c:\\windows\\system32;C:\\Program Files\\Git\\cmd;C:\\Users\\medha\\AppData\\Local\\Programs\\Python\\Python313\\Scripts;C:\\Users\\medha\\AppData\\Local\\Programs\\Python\\Python313;C:\\Users\\medha\\AppData\\Local\\Programs\\Python\\Python313\\python.exe;C:\\Users\\medha\\AppData\\Roaming\\Microsoft\\Windows\\Start Menu\\Programs\\Python 3.13;C:\\Users\\medha\\AppData\\Roaming\\Microsoft\\Windows\\Start Menu\\Programs\\Python\\Python 3.13;c:\\windows\\system32;C:\\Program Files\\Git\\cmd;C:\\Users\\medha\\OneDrive - University of Twente\\Documents\\Q2\\Projects\\ScientificGeocomputing;C:\\Users\\medha\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\medha\\AppData\\Roaming\\Microsoft\\Windows\\Start Menu\\Programs\\Python\\Python 3.13;.;C:/PROGRA~1/R/R-44~1.2/bin;C:/PROGRA~1/R/R-44~1.2\\bin\\x64\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check environment path \n",
     "print(os.environ[\"PATH\"])\n",
